<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/linear_layout_complete_border"
    android:padding="15dp">

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/editTextStartPadding"
        android:tag="regularFont"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider11"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/lightGrey"
        app:layout_constraintBottom_toTopOf="@+id/nameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt" />

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="@dimen/statusViewWidth"
        android:layout_height="@dimen/statusViewHeight"
        android:background="@drawable/down_rounded_corners_green"
        android:gravity="center"
        android:tag="bold"
        android:text="@string/approved"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:tag="regularFont"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11" />


    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:tag="bold"
        android:text="190 EGP"
        android:textColor="@color/green"
        android:textSize="@dimen/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <Button
        android:id="@+id/rejectBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_yellow_button"
        android:tag="bold"
        android:text="@string/reject"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="@+id/detailsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/approveBtn"
        app:layout_constraintTop_toBottomOf="@+id/priceTxt" />

    <Button
        android:id="@+id/detailsBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_yellow_button"
        android:tag="bold"
        android:text="@string/more_details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/approveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTxt" />

    <TextView
        android:id="@+id/calendarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/iconTextPadding"
        android:tag="icon"
        android:text="@string/calendarIcon"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/iconTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/dateTxt"
        app:layout_constraintStart_toStartOf="@+id/dateTxt"
        app:layout_constraintTop_toTopOf="@+id/dateTxt" />

    <Button
        android:id="@+id/approveBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_yellow_button"
        android:tag="bold"
        android:text="@string/approve"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rejectBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detailsBtn"
        app:layout_constraintTop_toBottomOf="@+id/priceTxt" />
    <Button
        android:id="@+id/finishBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/viewsHeight"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_yellow_button"
        android:tag="bold"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rejectBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detailsBtn"
        app:layout_constraintTop_toBottomOf="@+id/priceTxt" />
</android.support.constraint.ConstraintLayout>